--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "Black-clover-MD",
+"name": "black-clover-MD",
 "version": "7.7.7",
 "description": "El Mejor bot de WhatsApp",
 "main": "index.js",
