--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "author": {
     "name": "thecarlos19"
   },
+  "collaborators": {
+  "col1": "Antuan",
+  "col2": "Russell",
+  "col3": "yo xd ",
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thecarlos19/black-clover-MD.git"
