--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "src": "src",
     "plugins": "plugins"
   },
-
   "scripts": {
     "start": "node index.js",
     "qr": "node index.js qr",
@@ -18,7 +17,6 @@
     "eslint": "eslint .",
     "eslintfix": "eslint --fix ."
   },
-
   "homepage": "https://github.com/thecarlos19/black-clover-MD",
   "author": {
     "name": "thecarlos19"
@@ -28,7 +26,6 @@
     "col2": "Russell",
     "col3": "Edgar"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thecarlos19/black-clover-MD.git"
@@ -37,7 +34,6 @@
     "url": "https://github.com/thecarlos19/black-clover-MD/issues"
   },
   "license": "GPL-3.0-or-later",
-
   "dependencies": {
     "@whiskeysockets/baileys": "github:Kone457/baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
@@ -103,11 +99,10 @@
     "api-dylux": "^1.7.2",
     "yargs": "^17.3.1"
   },
-
   "optionalDependencies": {
     "wa-sticker-formatter": "^4.3.2",
     "moment-timezone": "^0.5.37"
   },
 
-  "_note": "Compatible con todas las plataformas"
+  "_note": "Compatible con todas las plataformas para bots de WhatsApp"
 }
