--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
 
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": ">=24.10.0",
+    "npm": ">=11.6.0"
   },
   "directories": {
     "lib": "lib",
@@ -39,7 +39,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@whiskeysockets/baileys": "github:Kone457/baileys",
+    "@whiskeysockets/baileys": "npm:wileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^4.2.4",
     "@bochilteam/scraper-sosmed": "^1.0.5",
