--- a/package.json
+++ b/package.json
@@ -45,30 +45,36 @@
     "@bochilteam/scraper-sosmed": "^1.0.5",
     "@xct007/frieren-scraper": "^0.0.2",
     "@ibaraki-douji/pixivts": "^2.4.1",
-    "awesome-phonenumber": "^3.4.0",
-    "ruhend-scraper": "^7.0.4",
-    "gradient-string": "^2.0.2",
-    "google-libphonenumber": "3.2.38",
-    "axios": "^1.1.2",
+    "@vitalets/google-translate-api": "^8.0.0",
     "acrcloud": "^1.4.0",
-    "form-data": "^4.0.0",
-    "cfonts": "^3.3.0",
+    "api-dylux": "^1.7.2",
+    "awesome-phonenumber": "^3.4.0",
+    "axios": "^1.1.2",
     "boxen": "^7.1.1",
+    "cfonts": "^3.3.0",
     "chalk": "^5.1.0",
-    "url-file-size": "^1.0.5-1",
-    "fluid-spotify.js": "*",
     "cheerio": "npm:cheerio@1.0.0-rc.12",
+    "didyoumean": "^1.2.2",
     "express": "^4.18.1",
     "file-type": "^18.0.0",
     "fluent-ffmpeg": "^2.1.2",
+    "fluid-spotify.js": "*",
+    "form-data": "^4.0.0",
     "formdata-node": "^5.0.0",
+    "g-i-s": "^2.1.6",
+    "google-it": "^1.6.4",
+    "google-libphonenumber": "3.2.38",
+    "gradient-string": "^2.0.2",
+    "hispamemes": "^1.0.7",
     "human-readable": "^0.2.1",
-    "didyoumean": "^1.2.2",
-    "jsdom": "^20.0.1",
+    "instagram-url-direct": "^1.0.13",
     "jimp": "^0.16.1",
+    "jsdom": "^20.0.1",
     "link-preview-js": "^3.0.0",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
+    "megajs": "^1.1.3",
+    "mime-types": "^3.0.1",
     "mongoose": "^6.6.5",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.2.10",
@@ -76,37 +82,31 @@
     "node-os-utils": "^1.3.6",
     "node-webpmux": "^3.1.3",
     "perf_hooks": "^0.0.1",
-    "pino": "^8.6.1",
     "performance-now": "^2.1.0",
-    "instagram-url-direct": "^1.0.13",
-    "pino-pretty": "^9.1.1",
     "pdfkit": "^0.13.0",
+    "pino": "^8.6.1",
+    "pino-pretty": "^9.1.1",
     "qrcode": "^1.5.1",
-    "sanzy-spotifydl": "*",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
+    "ruhend-scraper": "^7.0.4",
+    "sanzy-spotifydl": "*",
     "similarity": "^1.2.1",
-    "g-i-s": "^2.1.6",
     "socket.io": "^4.5.2",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
+    "translate-google-api": "^1.0.4",
+    "url-file-size": "^1.0.5-1",
     "url-regex-safe": "^3.0.0",
     "uuid": "^10.0.0",
-    "translate-google-api": "^1.0.4",
-    "google-it": "^1.6.4",
+    "ws": "^8.18.3",
+    "yargs": "^17.3.1",
     "yt-search": "^2.10.3",
-    "@vitalets/google-translate-api": "^8.0.0",
-    "hispamemes": "^1.0.7",
-    "openai": "^3.3.0",
-    "megajs": "^1.1.3",
-    "mime-types": "^2.1.35",
-    "api-dylux": "^1.7.2",
-    "yargs": "^17.3.1"
+    "openai": "^3.3.0"
   },
   "optionalDependencies": {
     "wa-sticker-formatter": "^4.3.2",
     "moment-timezone": "^0.5.37"
   },
-
   "_note": "Compatible con todas las plataformas para bots de WhatsApp"
 }
