Update baileys dependency to use npm version

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@whiskeysockets/baileys": "github:Melody-Xz/Delta",
+    "@whiskeysockets/baileys": "npm:wileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^4.2.4",
     "@bochilteam/scraper-sosmed": "^1.0.5",
